# json_rust

./: .gitignore  Cargo.toml  README.md
json_files/: complains.json  currencies.json  data_array_sample.json  demographic.json
nodejs/: airQuality.js  main.js
src/: main.rs
src/mods/: mod.rs  my_path.rs
