[package]
name = "read_json_from_file"
version = "0.1.0"
authors = ["Tonatiuh Martinez <merodeador.nocturno@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.103"
serde_json = "1.0.42"
serde_derive = "1.0.103"
regex = "1.3.1"
regex-syntax = "0.6.12"
dirs = "2.0.2"

[profile.dev]
opt-level = 3
